# cahn_hilliard_2d

./: CMakeLists.txt  README.md
examples/ex1/: make_input_data_files_ex1.py  plot_frame.py  postprocess.py  run_test.sh
examples/ex2/: make_input_data_files_test2.py  run_test.sh
examples/ex3/: run_test.sh
examples/ex4/: run_solver.sh  run_test.py  video.py
examples/paper_ex1/: plot_frame.py  postprocess.py  run_solver.sh  run_test.py  video.py
src/: boundary_conditions.h  ch2d.cpp  initial_conditions.h  mmstest_ch2d.cpp  petsc_event_handling.cpp  petsc_event_handling.h  postprocess.cpp  preprocess.cpp  rhs.cpp  rhs.h  temperature_dependence.cpp  temperature_dependence.h  utils_ch.cpp  utils_ch.h
tests/test_mms/: run_test.sh
